--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -9,27 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext Cython # this can only be run once"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Preferences:"
+    "%load_ext Cython"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILE_NAME = 'saved_data.npy' ## file name to save data as a string: \"example.npy\"\n",
+    "%%cython\n",
+    "#!python\n",
+    "#cython: boundscheck=False, initializedcheck=False, cdivision=True, nonecheck=False, linetrace=False, wraparound=False\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Preferences:\n",
+    "\n",
+    "FILE_NAME = 'L_data.npy' ## file name to save data as a string: \"example.npy\"\n",
     "\n",
     "# constants:\n",
     "\n",
@@ -46,22 +50,18 @@
     "# time range:\n",
     "\n",
     "t0 = 0\n",
-    "t1 = 300\n",
+    "t1 = 50\n",
     "\n",
     "# number of points to generate:\n",
     "\n",
-    "N = 50000\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%cython\n",
-    "#!python\n",
-    "#cython: boundscheck=False, initializedcheck=False, cdivision=True, nonecheck=False, linetrace=False, wraparound=False\n",
+    "N = 5000\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "import numpy as np\n",
     "cimport numpy as np\n",
